User should be redirected back to the projects page if they try going to a project that doesn't exist.

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,10 +23,12 @@ test: &test
   socket: /var/run/mysqld/mysqld.sock
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8
+  database: ticketee_production
+  username: root
+  password: 
+  socket: /var/run/mysqld/mysqld.sock
 
 cucumber:
   <<: *test
